@@ -1,28 +1,24 @@
-FROM ubuntu:14.04
+FROM alpine:3.4
 
-RUN apt-get update
-RUN apt-get install -y software-properties-common python-software-properties
+RUN apk add --update bash && rm -rf /var/cache/apk/*
 
-RUN add-apt-repository ppa:openjdk-r/ppa
-RUN apt-get update
+RUN apk --update add openjdk8-jre
+ENV SCALA_VERSION=2.12.0-M5 \
+    SCALA_HOME=/usr/share/scala
 
-RUN apt-get install -y openjdk-8-jdk
-RUN apt-get install -y wget
+RUN apk add --no-cache --virtual=.build-dependencies wget ca-certificates && \
+            apk add --no-cache bash && \
+            cd "/tmp" && \
+            wget "https://downloads.typesafe.com/scala/${SCALA_VERSION}/scala-${SCALA_VERSION}.tgz" && \
+            tar xzf "scala-${SCALA_VERSION}.tgz" && \
+            mkdir "${SCALA_HOME}" && \
+            rm "/tmp/scala-${SCALA_VERSION}/bin/"*.bat && \
+            mv "/tmp/scala-${SCALA_VERSION}/bin" "/tmp/scala-${SCALA_VERSION}/lib" "${SCALA_HOME}" && \
+            ln -s "${SCALA_HOME}/bin/"* "/usr/bin/" && \
+            apk del .build-dependencies && \
+            rm -rf "/tmp/"*
 
-RUN wget http://www.scala-lang.org/files/archive/scala-2.11.8.deb
-RUN dpkg -i scala-2.11.8.deb
-RUN echo "deb http://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 642AC823
+RUN apk --update add --virtual wget
+ADD https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.13.12/sbt-launch.jar /root/.sbt/launchers/0.13.12/sbt-launch.jar
 
-RUN apt-get update
-
-RUN apt-get install -y scala
-RUN apt-get install -y sbt
-
-ENV LC_ALL C.UTF-8
-
-WORKDIR /app
-RUN sbt clean
-
-ENTRYPOINT ["/usr/bin/sbt"]
-CMD clean
+ENTRYPOINT SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M" java $SBT_OPTS -jar /root/.sbt/launchers/0.13.12/sbt-launch.jar "$@"
